--- a/estilo.css
+++ b/estilo.css
@@ -9,6 +9,7 @@ h1{
 }
 
 h2{
+    text-shadow: 2px 1px 3px rgba(63, 161, 191, 0.83);
   padding: 5px;
   font-family: 'Boogaloo', cursive;
      width: 100%;
